fixes css for footer because sometime the page content was not anymore visible

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,5 +1,5 @@
 .let-space-for-footer {
-  margin-top: 60px;
+  padding-bottom: 130px;
 }
 
 .let-space-for-mobile-top-menu {
